fix: horizontal scrolling when many tasks

--- a/src/App.scss
+++ b/src/App.scss
@@ -29,6 +29,7 @@ $font-primary: 'Inter', sans-serif;
   flex-direction: column;
   align-items: center;
   background-color: $background-color;
+  height: 100%;
   min-height: 100vh;
 }
 
