--- a/src/components/Body/_Body.scss
+++ b/src/components/Body/_Body.scss
@@ -4,6 +4,7 @@
   align-items: center;
   width: 100%;
   max-width: 46rem;
+  height: 100%;
   min-height: 10rem;
 
   #todo-header {
@@ -70,9 +71,10 @@
 
   #todo-content {
     width: 100%;
-    height: 30rem;
+    height: 100%;
+    min-height: 30rem;
     margin-top: calc(4rem - 1.6875rem);
-    padding: 0 0.75rem;
+    padding: 0 0.75rem 1rem;
 
     .info-wrapper {
       display: flex;
